# acousticIsoLib_3D

./: .gitmodules  LICENSE  README.md
acoustic_iso_lib_3d/: CMakeLists.txt
acoustic_iso_lib_3d/acoustic_iso_double/: CMakeLists.txt
acoustic_iso_lib_3d/acoustic_iso_double/include/: BornExtGpu_3D.h  BornExtShotsGpuFunctions_3D.h  BornExtShotsGpu_3D.h  BornGpu_3D.h  BornShotsGpuFunctions_3D.h  BornShotsGpu_3D.h  deviceGpu_3D.h  fdParam_3D.h  freeSurfaceDebugOp.h  interpTimeLinTbb_3D.h  laplacianGpu_3D.h  nonlinearPropGpu_3D.h  nonlinearPropShotsGpu_3D.h  nonlinearShotsGpuFunctions_3D.h  operator.h  pinWavefieldGpu_3D.h  secondTimeDerivative_3D.h  seismicOperator_3D.cpp  seismicOperator_3D.h  tomoExtGpu_3D.h  tomoExtShotsGpuFunctions_3D.h  tomoExtShotsGpuFunctions_3D_temp.h  tomoExtShotsGpu_3D.h  varDeclare_3D.h  wavefieldVector_3D.h
acoustic_iso_lib_3d/acoustic_iso_double/src/: ._BornExtShotsGpuFunctions_3D.cu  BornExtGpu_3D.cpp  BornExtShotsGpuFunctionsTemp.cu  BornExtShotsGpuFunctions_3D.cu  BornExtShotsGpu_3D.cpp  BornGpu_3D.cpp  BornShotsGpuFunctions_3D.cu  BornShotsGpu_3D.cpp  cudaCodeJunk.cu  cudaErrors_3D.cu  deviceGpu_3D.cpp  fdParam_3D.cpp  freeSurfaceDebugOp.cpp  interpTimeLinTbb_3D.cpp  kernelsGinsuGpu_3D.cu  kernelsGpu_3D.cu  kernelsGpu_3D_debug.cu  laplacianGpu_3D.cpp  nonlinearPropGpu_3D.cpp  nonlinearPropShotsGpu_3D.cpp  nonlinearShotsGpuFunctions_3D.cu  nonlinearShotsGpuFunctions_3D_debug.cu  padFileGpuMain_3D.cpp  secondTimeDerivative_3D.cpp  testCpp.cu  tomoExtGpu_3D.cpp  tomoExtShotsGpuFunctionsAuxFsGinsu_3D.cu  tomoExtShotsGpuFunctionsAuxFs_3D.cu  tomoExtShotsGpuFunctionsAuxNormalGinsu_3D.cu  tomoExtShotsGpuFunctionsAuxNormal_3D.cu  tomoExtShotsGpuFunctions_3D.cu  tomoExtShotsGpuFunctions_3D_temp.cu  tomoExtShotsGpu_3D.cpp  tomoExtTemp.cu
acoustic_iso_lib_3d/acoustic_iso_float/: CMakeLists.txt
acoustic_iso_lib_3d/acoustic_iso_float/include/: BornExtGpu_3D.h  BornExtShotsGpuFunctions_3D.h  BornExtShotsGpu_3D.h  BornGpu_3D.h  BornShotsGpuFunctions_3D.h  BornShotsGpu_3D.h  deviceGpu_3D.h  fdParam_3D.h  freeSurfaceDebugOp.h  interpTimeLinTbb_3D.h  laplacianGpu_3D.h  nonlinearPropGpu_3D.h  nonlinearPropShotsGpu_3D.h  nonlinearShotsGpuFunctions_3D.h  pinWavefieldGpu_3D.h  secondTimeDerivative_3D.h  seismicOperator_3D.cpp  seismicOperator_3D.h  tomoExtGpu_3D.h  tomoExtShotsGpuFunctions_3D.h  tomoExtShotsGpuFunctions_3D_temp.h  tomoExtShotsGpu_3D.h  varDeclare_3D.h  wavefieldVector_3D.h
acoustic_iso_lib_3d/acoustic_iso_float/src/: BornExtGpu_3D.cpp  BornExtShotsGpuFunctions_3D.cu  BornExtShotsGpu_3D.cpp  BornGpu_3D.cpp  BornShotsGpuFunctions_3D.cu  BornShotsGpu_3D.cpp  deviceGpu_3D.cpp  fdParam_3D.cpp  freeSurfaceDebugOp.cpp  interpTimeLinTbb_3D.cpp  kernelsGinsuGpu_3D.cu  kernelsGpu_3D.cu  laplacianGpu_3D.cpp  nonlineaPropShotsGpu_3D.cpp  nonlinearPropGpu_3D.cpp  nonlinearPropShotsGpu_3D.cpp  nonlinearShotsGpuFunctions_3D.cu  padFileGpuMain_3D.cpp  secondTimeDerivative_3D.cpp  tomoExtGpu_3D.cpp  tomoExtShotsGpuFunctionsAuxFsGinsu_3D.cu  tomoExtShotsGpuFunctionsAuxFs_3D.cu  tomoExtShotsGpuFunctionsAuxNormalGinsu_3D.cu  tomoExtShotsGpuFunctionsAuxNormal_3D.cu  tomoExtShotsGpuFunctions_3D.cu  tomoExtShotsGpuFunctions_3D_temp.cu  tomoExtShotsGpu_3D.cpp  tomoExtTemp.cu
acoustic_iso_lib_3d/python/python_double/: Acoustic_iso_double_3D.py  BornExtPythonDoubleMain_3D.py  BornPythonDoubleMain_3D.py  CMakeLists.txt  fwiDoubleMain_3D.py  inversionUtilsDouble_3D.py  lsrtmDoubleMain_3D.py  makeIrregGeometryAxial_3D.py  makeIrregGeometryBorn_3D.py  makeIrregGeometry_3D.py  nonlinearPythonDoubleMain_3D.py  pyAcoustic_iso_double_BornExt_3D.cpp  pyAcoustic_iso_double_Born_3D.cpp  pyAcoustic_iso_double_nl_3D.cpp  pyAcoustic_iso_double_tomoExt_3D.cpp  pyWavefieldVector_3D.cpp  tomoExtPythonDoubleMain_3D.py
acoustic_iso_lib_3d/python/python_float/: Acoustic_iso_float_3D.py  BornExtPythonFloatMain_3D.py  BornPythonFloatMain_3D.py  CMakeLists.txt  extLsrtmFloatMain_3D.py  fwiFloatMain_3D.py  fwimeFloatMain_3D.py  inversionUtilsFloat_3D.py  lsrtmFloatMain_3D.py  makeGeomLsrtmFloat_3D.py  makeIrregGeometryFloat_3D.py  nonlinearPythonFloatMain_3D.py  pyAcoustic_iso_float_BornExt_3D.cpp  pyAcoustic_iso_float_Born_3D.cpp  pyAcoustic_iso_float_nl_3D.cpp  pyAcoustic_iso_float_tomoExt_3D.cpp  tomoExtPythonFloatMain_3D.py
acoustic_iso_lib_3d/seis_utils_3D/seis_utils_double_3D/include/: interpBSpline_3D.h
acoustic_iso_lib_3d/seis_utils_3D/seis_utils_float_3D/: CMakeLists.txt
acoustic_iso_lib_3d/seis_utils_3D/seis_utils_float_3D/include/: dataTaper_3D.h  dsoGpu_3D.h  interpBSpline_3D.h  operator.h  traceNorm_3D.h
acoustic_iso_lib_3d/seis_utils_3D/seis_utils_float_3D/python/: CMakeLists.txt  dataTaperMain_3D.py  dataTaperModule_3D.py  dsoGpuMain_3D.py  dsoGpuModule_3D.py  generateGeomAcousticMain_3D.py  generatePSF_3D.py  interpBSplineInvMain_3D.py  interpBSplineIterMain_3D.py  interpBSplineModule_3D.py  interpPSF_3D.py  maskGradientMain_3D.py  maskGradientModule_3D.py  off2angMain_3D.py  off2angModule_3D.py  pyDataTaper_3D.cpp  pyDsoGpu_3D.cpp  pyInterpBSpline_3D.cpp  pyTraceNorm_3D.cpp  traceNormDerivMain_3D.py  traceNormMain_3D.py  traceNormModule_3D.py
acoustic_iso_lib_3d/seis_utils_3D/seis_utils_float_3D/src/: dataTaper_3D.cpp  dsoGpu_3D.cpp  interpBSpline_3D.cpp  traceNorm_3D.cpp
